--- a/festival/Client/Pages/FrivilligeListe.razor
+++ b/festival/Client/Pages/FrivilligeListe.razor
@@ -77,7 +77,7 @@ else //Oprettelse af table
 
     <label for="DeleteFrivilligHandler">Indtast et ID, hvis du vil slette</label>
     <div class="col-sm-12">
-        <button class="btn btn-primary" @onclick="DeleteFrivilligHandler">Delete vagt</button>
+        <button class="btn btn-primary" @onclick="DeleteFrivilligHandler">Slet frivillig</button>
     </div>
 
 
