--- a/festival/Client/Pages/FrivilligePage.razor
+++ b/festival/Client/Pages/FrivilligePage.razor
@@ -71,21 +71,20 @@
         </div>
 
         <div class="col-sm-12">
-            <button class="btn btn-primary" @onclick="AddFrivilligItemHandler">Opret frivillig</button>
+            <button class="btn btn-primary" @onclick="AddFrivilligItemHandler">Opret Frivillig</button>
         </div>
 
         <label for="UpdateFrivilligHandler">Indtast et ID på personen du vil opdatere på, derefter udfyld forms</label>
         <div class="col-sm-12">
-            <button class="btn btn-primary" @onclick="UpdateFrivilligHandler">Opdater frivillig</button>
+            <button class="btn btn-primary" @onclick="UpdateFrivilligHandler">Opdater Frivillig</button>
         </div>
 
         <label for="DeleteFrivilligHandler">Indtast et ID, hvis du vil slette</label>
         <div class="col-sm-12">
-            <button class="btn btn-primary" @onclick="DeleteFrivilligHandler">Delete frivillig</button>
+            <button class="btn btn-primary" @onclick="DeleteFrivilligHandler">Slet Frivillig</button>
         </div>
 
-        <!-----Koden virker ikke? Skal vi fikse eller slette-->
-        <h2>Booking: return code: @ErrorCode</h2>
+     
 
     </form>
 
