--- a/festival/Client/Pages/Index.razor
+++ b/festival/Client/Pages/Index.razor
@@ -12,10 +12,10 @@
 
         <p style="font-size:90px; text-align:center;">Musik Festival</p>
         <p style="font-size:17px; text-align:center;">
-            Der er mange gode grunde til at være frivillig til en festival.
-            For det første vil du have mulighed for at bidrage til festivallens succes og være en del af et fællesskab.
-            Du vil også have mulighed for at lære nye færdigheder og møde nye mennesker.
-            Desuden vil du få en unik oplevelse og et indblik i, hvordan en festival fungerer bag kulisserne.
+            Der er mange gode ting ved at være frivillig til vores musik festival.
+            Du kommer til at være en del af vores fælleskab og derved en masse nye venner.
+            Desuden er det en god mulighed for at lære noget nyt, og omkring mange nye ting.
+            Her hos os får du en unik mulighed, for at få et indblik i hvordan en festival fungere bag kulisserne.
         </p>
 
     </body>
