--- a/festival/Client/Pages/MinprofilPage.razor
+++ b/festival/Client/Pages/MinprofilPage.razor
@@ -50,7 +50,7 @@
                     {
                         if (vagt.Arbejdspladsid == hent.Arbejdspladsid)
                         {
-                            <option value="@vagt.Vagtid"> @hent.Arbejdspladsnavn Dag: @vagt.Datodag Kl: @vagt.Tidstart - @vagt.Tidslut ID: @vagt.Vagtid </option>
+                            <option value="@vagt.Vagtid"> @hent.Arbejdspladsnavn - Dag: @vagt.Datodag Kl: @vagt.Tidstart - @vagt.Tidslut ID: @vagt.Vagtid </option>
                         }
 
                     }
