--- a/festival/Client/Shared/NavMenu.razor
+++ b/festival/Client/Shared/NavMenu.razor
@@ -11,12 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="frivilligepage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Opret frivillige
+                <span class="oi oi-home" aria-hidden="true"></span> Forsiden
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -25,13 +20,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="frivilligepage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Opret frivillige
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="koordinator">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Koordinator
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Opret vagter
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="vagtliste">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Vagt liste
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Vagtlisten (EDIT)
             </NavLink>
         </div>
         <div class="nav-item px-3">
@@ -45,8 +45,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="musikpage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> musikpage
+            <NavLink class="nav-link" href="prioriteretvagter">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Prioriteret vagter
             </NavLink>
         </div>
     </nav>
