--- a/festival/Client/Pages/KoordinatorPage.razor
+++ b/festival/Client/Pages/KoordinatorPage.razor
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <!---Vagtid-->
+    <!---Vagt ID-->
     <div class="col-md-4 mb-3">
         <label for="Vagtid">Vagt ID</label>
         <InputNumber id="Vagtid" @bind-Value="Vagtid" class="form-control"
@@ -46,13 +46,12 @@
         <ValidationMessage For="@(() => Vagtid)" />
     </div>
 
-    <!----Dato for vagt-->
+    <!----Ugedag for vagt-->
     <div class="col-md-4 mb-3">
         <label for="Dag">Dag</label>
         <InputText id="Datodag" @bind-Value="Datodag" class="form-control" />
 
     </div>
-
 
     <!----Tidstart for vagt-->
     <div class="col-md-4 mb-3">
