--- a/festival/Client/Pages/PointPage.razor
+++ b/festival/Client/Pages/PointPage.razor
@@ -9,7 +9,6 @@
 @page "/point"
 
 
-
 <PageTitle>Point-oversigt</PageTitle>
 
 <h1>Velkommen til point-oversigt</h1>
@@ -21,6 +20,7 @@ Top 20 modtager gratis VIP armbånd for næste år
 <br />
 Top 30 modtager gratis Allday-armbånd for næste år
 
+<!---Styling af vores tabel-->
 <style>
     .highlight-row-1st {
         background-color: goldenrod;
@@ -38,11 +38,11 @@ Top 30 modtager gratis Allday-armbånd for næste år
 @if (gets == null)
 {
     <p><em>Loading...</em></p>
-}
-else //Oprettelse af table
-{
-    // Find the maximum value of "samletantalpoint" in the list
-    var maxPoints = gets.Max(f => f.Samletantalpoint);
+    }
+    else //Oprettelse af table
+    {
+        //Finder max-value af samleantalpoint (vagt) i vores liste
+        var maxPoints = gets.Max(f => f.Samletantalpoint);
 
     <table class="table table-striped table-hover">
         <thead>
@@ -55,9 +55,6 @@ else //Oprettelse af table
         <tbody>
             @foreach (var get in gets)
             {
-
-
-                // Determine whether to apply the "highlight-row" class to the current row
                 <tr class="@(get.Samletantalpoint == maxPoints ? "highlight-row-1st" : get.Samletantalpoint == null ? "highlight-row-nullPoints" : "")">
                     <td>@get.Frivilligid</td>
                     <td>@get.Fornavn @get.Efternavn</td>
@@ -72,7 +69,6 @@ else //Oprettelse af table
 @code {
     [Inject]
     public IFrivilligeService FrivilligeService { get; set; }
-
     public List<Frivillige> gets = new List<Frivillige>();
     protected override async Task OnInitializedAsync()
     {
