--- a/festival/Client/Pages/PriorteretVagter.razor
+++ b/festival/Client/Pages/PriorteretVagter.razor
@@ -15,6 +15,7 @@
 
 Her kan du se de mest prioteret vagter. Dem med flest point er dem, som er mest prioteret.
 
+<!---Styling af vores tabel-->
 <style>
     .highlight-row-1st {
         background-color: goldenrod;
@@ -35,7 +36,7 @@ Her kan du se de mest prioteret vagter. Dem med flest point er dem, som er mest 
 }
 else //Oprettelse af table
 {
-    // Find the maximum value of "samletantalpoint" in the list
+    //Finder max-value af antalpoint (vagt) i vores liste
     var maxPoints = gets.Max(f => f.Antalpoint);
 
     <table class="table table-striped table-hover">
@@ -48,11 +49,7 @@ else //Oprettelse af table
         <tbody>
             @foreach (var get in gets)
             {
-
-
-                // Determine whether to apply the "highlight-row" class to the current row
                 <tr class="@(get.Antalpoint == maxPoints ? "highlight-row-1st" : get.Antalpoint == null ? "highlight-row-nullPoints" : "")">
-
                     <td>@get.Vagtid</td>
                     <td>@get.Antalpoint </td>
                 </tr>
@@ -74,7 +71,7 @@ else //Oprettelse af table
 
     public List<Vagt> gets = new List<Vagt>();
 
-
+    //Her laver den en sortering på antal-point
     protected override async Task OnInitializedAsync()
     {
         gets = (await VagtService.GetAllVagt())
